fix: normalise scrollbar styles across platforms

--- a/src/app.css
+++ b/src/app.css
@@ -69,6 +69,16 @@
   .ripple.ripple-invert:active:after {
     opacity: 0.1;
   }
+
+  ::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    @apply bg-gray-300 hover:bg-gray-400 rounded-full transition-colors;
+  }
 }
 
 @layer components {
